--- a/AuthServer/Views/Home/Index.cshtml
+++ b/AuthServer/Views/Home/Index.cshtml
@@ -1,5 +1,4 @@
-﻿
-@{
+﻿@{
     Layout = null;
 }
 
@@ -8,7 +7,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <script src="~/scripts/login.js"></script>
+    <script src="~/scripts/login.bundle.js"></script>
     <title>Index</title>
 </head>
 <body>
