added viewstart and layout page

--- a/AuthServer/Views/Home/Index.cshtml
+++ b/AuthServer/Views/Home/Index.cshtml
@@ -1,15 +1,6 @@
-﻿@{
-    Layout = null;
+﻿@section content { 
+    <script src="~/scripts/login.bundle.js"></script>
+    <link href="~/Styles/login.bundle.css" rel="stylesheet" />
 }
 
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <script src="~/scripts/login.bundle.js"></script>
-    <title>Index</title>
-</head>
-<body>
-</body>
-</html>
+<div>Index</div>
