added bootstrap to layout page

--- a/AuthServer/Views/_Layout.cshtml
+++ b/AuthServer/Views/_Layout.cshtml
@@ -8,6 +8,8 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>AuthServer</title>
+    <script src="~/scripts/vendor.bundle.js"></script>
+    <link href="~/Styles/vendor.bundle.css" rel="stylesheet" />
     @RenderSection("content", false)
 </head>
 <body>
