refactored js and sass files project structure

--- a/AuthServer/Views/Home/Index.cshtml
+++ b/AuthServer/Views/Home/Index.cshtml
@@ -3,4 +3,7 @@
     <link href="~/Styles/login.bundle.css" rel="stylesheet" />
 }
 
-<div class="btn btn-success">Index</div>
+<div class="container-fluid height-100">
+    <div class="height-50" style="background-color:  greenyellow"></div>
+    <div class="height-50"></div>
+</div>
