--- a/AuthServer/Views/_Layout.cshtml
+++ b/AuthServer/Views/_Layout.cshtml
@@ -9,7 +9,9 @@
     <meta name="viewport" content="width=device-width" />
     <title>AuthServer</title>
     <script src="~/scripts/vendor.bundle.js"></script>
+    <script src="~/scripts/app.bundle.js"></script>
     <link href="~/Styles/vendor.bundle.css" rel="stylesheet" />
+    <link href="~/Styles/app.bundle.css" rel="stylesheet" />
     @RenderSection("content", false)
 </head>
 <body>
