--- a/AuthServer/Content/Styles/_partials/_layout.scss
+++ b/AuthServer/Content/Styles/_partials/_layout.scss
@@ -1,11 +1,7 @@
-﻿html, body {
+﻿html {
     height: 100%;
-}
 
-.height-100 {
-    height: 100%;
-}
-
-.height-50 {
-    height: 50%;
+    body {
+        background-image: linear-gradient(to bottom, $app-green, $app-green 50%, white 50%);
+    }
 }
