--- a/AuthServer/Views/Home/Index.cshtml
+++ b/AuthServer/Views/Home/Index.cshtml
@@ -1,9 +1,3 @@
-﻿@section content { 
-    <script src="~/scripts/login.bundle.js"></script>
-    <link href="~/Styles/login.bundle.css" rel="stylesheet" />
-}
-
-<div class="container-fluid height-100">
-    <div class="height-50" style="background-color:  greenyellow"></div>
-    <div class="height-50"></div>
+﻿<div class="container-fluid height-100">
+    <i class="fas fa-camera-retro"></i>
 </div>
