added main login page

--- a/AuthServer/Content/Styles/_partials/_layout.scss
+++ b/AuthServer/Content/Styles/_partials/_layout.scss
@@ -1,7 +1,41 @@
 ﻿html {
     height: 100%;
+}
 
-    body {
-        background-image: linear-gradient(to bottom, $app-green, $app-green 50%, white 50%);
+body {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-image: linear-gradient(to bottom, $app-green, $app-green 50%, white 50%);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.flex {
+    display: flex;
+}
+
+.flex-columns {
+    flex-direction: column;
+}
+
+.flex-centered {
+    justify-content: center;
+}
+
+.container {
+    padding: 30px;
+
+    &-white {
+        background-color: white;
     }
+
+    &-shadow {
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    }
+}
+
+.comic-font {
+    font-family: "Comic Sans MS", cursive, sans-serif;
 }
