--- a/AuthServer/Views/RegisterAccount/Index.cshtml
+++ b/AuthServer/Views/RegisterAccount/Index.cshtml
@@ -10,16 +10,18 @@
             @using (Html.BeginForm("Index"))
             {
                 <div class="form-group">
-                    @Html.LabelFor(m => m.Email, "Email")
-                    @Html.TextBoxFor(m => m.Email, new {type = "email", name = nameof(Model.Email), @class = "form-control", placeholder = "Your email", data_bind = "value: email"})
+                    <label for="email">Email</label>
+                    <input type="email" id="email" name="email" class="form-control" 
+                           placeholder="Your email" data-bind="textInput: email, css: { 'input-error': !emailIsValid() }"/>
                 </div>
                 <div class="form-group">
-                    @Html.LabelFor(m => m.Password, "Password")
-                    @Html.TextBoxFor(m => m.Password, new {type = "password", name = nameof(Model.Password), @class = "form-control", placeholder = "Password", data_bind = "value: password"})
+                    <label for="password">Password</label>
+                    <input type="password" id="password" name="password" class="form-control" placeholder="Password" data-bind="textInput: password"/>
                 </div>
                 <div class="form-group">
-                    @Html.LabelFor(m => m.ConfirmPassword, "Confirm Password")
-                    @Html.TextBoxFor(m => m.ConfirmPassword, new {type = "password", name = nameof(Model.ConfirmPassword), @class = "form-control", placeholder = "Confirm Password", data_bind = "value: confirmPassword"})
+                    <label for="confirmPassword">Password</label>
+                    <input type="password" id="confirmPassword" name="confirmPassword" class="form-control" 
+                           placeholder="Confirm Password" data-bind="textInput: confirmPassword, css: { 'input-error': !passwordsMatch() }" />
                 </div>
                 <br/>
                 <button type="submit" class="btn btn-primary btn-block" data-bind="enable: formIsValid">Create Account</button>
